# differences

./: .gitignore  .readthedocs.yaml  CITATION.cff  DELETE-pyproject-OLD.toml  LICENSE  LICENSE.md  README.md  pyproject-OLD.toml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini  versions.json
.github/workflows/: build.yaml  docs.yaml  lint.yaml  release.yaml  test.yaml
differences/: __init__.py
differences/attgt/: __init__.py  aggregate.py  attgt.py  attgt_cal.py  difference.py  mboot.py  plot.py  utility.py
differences/datasets/: __init__.py  generate_data.py  load_data.py  me.csv  rcs-multi_period.csv  rcs-two_periods.csv
differences/did/: att_if.py  did_cal.py  double_ml.py  pscore_cal.py  utility.py
differences/tests/: _attgt.py  _datasets.py  _rutility.py  _twfe.py  _utility.py  r_did_results  test_attgt.py  test_twfe.py
differences/tools/: panel_utility.py  panel_validation.py  r_install.py  relative_periods.py  utility.py
differences/tools/feols/: ols.py  utility.py
differences/twfe/: __init__.py  plot.py  twfe.py  utility.py
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/_static/css/: custom.css
doc/source/api_reference/: attgt.rst  index.rst  twfe.rst
doc/source/example_notebooks/: index.rst
doc/source/getting_started/: index.rst
doc/source/notebooks/: attgt.ipynb  twfe.ipynb
docs/: api.rst  conf.py  index.rst  ipython_with_reprs.py  requirements.txt
docs/_static/: extra.css
docs/_templates/: base.html
docs/basic-usage/: basic-usage.rst  notebooks.rst
docs/basic-usage/objects/: basic-usage.rst  example.rst
docs/development/: documentation.rst  formatting.rst  installation.rst  unit-tests.rst
docs/release-notes/: v0.0.md  v0.2.md
examples/: attgt.ipynb  attgt.py  twfe.ipynb
src/differences/: __init__.py
src/differences/attgt/: attgt.py  attgt_cal.py  difference.py  mboot.py  utility.py
src/differences/datasets/: __init__.py  generate_data.py  mpdta.csv  se.csv
src/differences/did/: double_ml.py
src/differences/tools/: panel_utility.py  panel_validation.py  relative_periods.py  utility.py
src/differences/tools/feols/: ols.py
src/differences/twfe/: __init__.py  twfe.py
v0.2.0/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
v0.2.0/.doctrees/: api.doctree  environment.pickle  genindex.doctree  getting-started.doctree  index.doctree
v0.2.0/.doctrees/api/: differences.ATTgt.__init__.doctree  differences.ATTgt.aggregate.doctree  differences.ATTgt.data.doctree  differences.ATTgt.doctree  differences.ATTgt.estimation_details.doctree  differences.ATTgt.fit.doctree  differences.ATTgt.group_time.doctree  differences.ATTgt.results.doctree  differences.ATTgt.sample_names.doctree  differences.ATTgt.wald_pre_test.doctree  differences.simulate_data.doctree
v0.2.0/.doctrees/basic-usage/: attgt.doctree  basic-usage.doctree  notebooks.doctree
v0.2.0/.doctrees/release-notes/: v0.2.doctree  versioning.doctree
v0.2.0/_sources/: getting-started.rst.txt
v0.2.0/_sources/basic-usage/: basic-usage.rst.txt
v0.2.0/_sources/release-notes/: versioning.rst.txt
v0.2.0/_static/: sphinx_immaterial_theme.e934c770bedcfcd6f.min.css
v0.2.0/api/: index.html
v0.2.0/api/differences.ATTgt/: index.html
v0.2.0/api/differences.ATTgt.__init__/: index.html
v0.2.0/api/differences.ATTgt.aggregate/: index.html
v0.2.0/api/differences.ATTgt.data/: index.html
v0.2.0/api/differences.ATTgt.estimation_details/: index.html
v0.2.0/api/differences.ATTgt.fit/: index.html
v0.2.0/api/differences.ATTgt.group_time/: index.html
v0.2.0/api/differences.ATTgt.results/: index.html
v0.2.0/api/differences.ATTgt.sample_names/: index.html
v0.2.0/api/differences.ATTgt.wald_pre_test/: index.html
v0.2.0/api/differences.simulate_data/: index.html
v0.2.0/basic-usage/basic-usage/: index.html
v0.2.0/basic-usage/notebooks/: index.html
v0.2.0/genindex/: index.html
v0.2.0/getting-started/: index.html
v0.2.0/py-modindex/: index.html
v0.2.0/release-notes/v0.2/: index.html
v0.2.0/release-notes/versioning/: index.html
