[tool.poetry]
name = "differences"
version = "0.1.1"
description = "difference-in-differences estimation and inference in Python"
authors = ["Bernardo Dionisi <bernardo.dionisi@gmail.com>"]
readme = "README.md"
license = "GPLv3"
homepage = "https://github.com/bernardodionisi/differences"
repository = "https://github.com/bernardodionisi/differences"
classifiers = [
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
pandas = ">=1.2"
numpy = ">=1.16"
scipy = ">=1.7.3"
formulaic = ">=0.3.4,<0.4.0"
linearmodels = ">=4.25"
statsmodels = ">=0.13,<1.0"
pyhdfe = "^0.1.2"
scikit-learn = ">=1.0.2"
plotto = "^0.1.3"
tqdm = "^4.64.1"
joblib = "^1.2.0"


[tool.poetry.group.doc.dependencies]
furo = "^2022.12.7"
sphinx-copybutton = "^0.5.0"
jupyter = "^1.0.0"
sphinx = "^5.3.0"
nbsphinx = "^0.8.9"
altair = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
    #    "D", # pydocstyle
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "PD", # pandas-vet (PD)
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    #    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["differences", "plotto"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257".
